# python-gql-compiler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  main.py  pyproject.toml  readme.md
.github/workflows/: main.yml
example/: client_queries.graphql  client_queries.py  config.yml  custom_scalars.py  q0.graphql  q1.graphql  run_client.py  run_client2.py  schema.graphql  server.py  starwars.graphql
example/server/: package-lock.json  package.json  server.js
gql_compiler/: cli.py  parser.py  query_parser.py  renderer.py  types.py  utils.py
tests/: dataclass-conf.yml  schema.graphql  testbase.py  typeddict-conf.yml
tests/dataclass/: test_customscalar.py  test_inlinefragment.py  test_mutation.py  test_object.py  test_recursive.py  test_scalar.py  test_subscription.py  test_union.py
tests/gql_compiler/: test_cli.py  test_main.py  test_parser.py  test_renderer.py  test_types.py  test_utils.py
tests/queries/customscalar/: query.graphql  query_dataclass.py  query_typeddict.py
tests/queries/inlinefragment/: query.graphql  query_dataclass.py  query_typeddict.py
tests/queries/mutation/: mutation.graphql  mutation_dataclass.py  mutation_typeddict.py
tests/queries/object/: query.graphql  query_dataclass.py  query_typeddict.py
tests/queries/recursive/: query.graphql  query_dataclass.py  query_typeddict.py
tests/queries/scalar/: query.graphql  query_dataclass.py  query_typeddict.py
tests/queries/subscription/: subscription.graphql  subscription_dataclass.py  subscription_typeddict.py
tests/queries/union/: query.graphql  query_dataclass.py  query_typeddict.py
tests/typeddict/: test_customscalar.py  test_inlinefragment.py  test_mutation.py  test_object.py  test_recursive.py  test_scalar.py  test_subscription.py  test_union.py
