[tool.poetry]
name = "python-gql-compiler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gql = "^3.0.0"
dataclasses-json = "^0.5.6"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.1.0"
gql = {extras = ["all"], version = "^3.0.0"}
mypy-extensions = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 110
max-complexity = 18
extend-ignore = "E203,"  # blackと競合してる
